--- a/AdaptiveTileExtensions/AdaptiveTileExtensions.csproj
+++ b/AdaptiveTileExtensions/AdaptiveTileExtensions.csproj
@@ -112,13 +112,14 @@
     <Compile Include="AdaptiveTile.cs" />
     <Compile Include="Branding.cs" />
     <Compile Include="Group.cs" />
+    <Compile Include="ImageCropping.cs" />
     <Compile Include="ImagePlacement.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubGroup.cs" />
     <Compile Include="TemplateType.cs" />
     <Compile Include="Text.cs" />
-    <Compile Include="TextAlignment.cs" />
+    <Compile Include="Alignment.cs" />
     <Compile Include="TextStacking.cs" />
     <Compile Include="TextStyle.cs" />
     <Compile Include="Tile.cs" />
