Removed GetXml method

--- a/AdaptiveTileExtensions.nuspec
+++ b/AdaptiveTileExtensions.nuspec
@@ -4,7 +4,7 @@
         <id>AdaptiveTileExtensions</id>
         <version>1.0.0</version>
         <title />
-        <authors>ScottISAFool</authors>
+        <authors>ScottIsAFool</authors>
         <owners />
         <licenseUrl>https://raw.githubusercontent.com/ScottIsAFool/AdaptiveTileExtensions/master/LICENSE</licenseUrl>
         <projectUrl>https://github.com/ScottIsAFool/AdaptiveTileExtensions</projectUrl>
